--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crimson+Text">
 
 <link rel="stylesheet" href="index.css">
 
 <body>
-    <div class="container-fluid">
+    <div class="container mx-auto mt-5 portfolio">
         <div class="row">
             <div class="col mx-auto text-center mt-5">
                 <h1>Charles Jake Dickie</h1>
@@ -16,7 +16,21 @@
             </div>
         </div>
 
-        <div class=> </div>
+        <div class="row">
+            <div class="col mx-auto text-center mt-5">
+                <h2>Experience</h2>
+                I have plenty
+            </div>
+        </div>
+
+
+        <div class="row mt-5">
+            <div class="col mx-auto text-center">
+                <canvas id="render"></canvas>
+            </div>
+        </div>
+
+
 
 
 
@@ -37,9 +51,11 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
 </body>
+
+<script type="module" src="app.js "></script>
 
 </html>
