--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <link rel="stylesheet" href="index.css">
 
 <body>
-    <div class="container mx-auto mt-5 portfolio">
+    <div class="container mx-auto mt-5 portfolio" id="container">
+        <canvas id="render"></canvas>
+
         <div class="row">
             <div class="col mx-auto text-center mt-5">
                 <h1>Charles Jake Dickie</h1>
@@ -17,17 +19,12 @@
         </div>
 
         <div class="row">
-            <div class="col mx-auto text-center mt-5">
+            <div class="col mx-auto text-center mt-2">
                 <h2>Experience</h2>
                 I have plenty
             </div>
         </div>
 
-        <div class="row mt-5">
-            <div class="col mx-auto text-center">
-                <canvas id="render"></canvas>
-            </div>
-        </div>
     </div>
 
 
