Fixed centring and z-index of canvas.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div class="container mx-auto mt-5 portfolio" id="container">
         <canvas id="render"></canvas>
 
-        <div class="row">
+        <div class="row front">
             <div class="col mx-auto text-center mt-5">
                 <h1>Charles Jake Dickie</h1>
                 Third Year Undergraduate at Imperial College London
             </div>
         </div>
 
-        <div class="row">
+        <div class="row front">
             <div class="col mx-auto text-center mt-2">
                 <h2>Experience</h2>
                 I have plenty
