--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="row front">
             <div class="col mx-auto text-center mt-5">
                 <h1>Charles Jake Dickie</h1>
-                Third Year Undergraduate at Imperial College London
+                Third Year Computing Undergraduate at Imperial College London
             </div>
         </div>
 
