Updated page to include CV link.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 
         <div class="row front">
             <div class="col mx-auto text-center mt-2">
-                <h2>Experience</h2>
-                I have plenty
+                <a href="CV_Jake_Dickie.pdf">Curriculum Vitae</a>
             </div>
         </div>
 
