Updated CV to current version.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="row front">
             <div class="col mx-auto text-center mt-2">
-                <a href="CV_Jake_Dickie.pdf">Curriculum Vitae</a>
+                <a href="CV_Charles_Dickie.pdf">Curriculum Vitae</a>
             </div>
         </div>
 
