Update bio and CV

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="row front">
             <div class="col mx-auto text-center mt-5">
                 <h1>Charles Jake Dickie</h1>
-                MEng Computing Graduate from Imperial College London
+                Software Engineer based in London
             </div>
         </div>
 
